[package]
name = "token-staking"
version = "0.1.0"
description = "Token Staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_staking"

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
